fix(chat): Reverted to using display: flex with flex-direction: column-reverse to bottom-align posts

--- a/src/frontend/styles/chat.less
+++ b/src/frontend/styles/chat.less
@@ -17,6 +17,8 @@
     padding: 0px;
     overflow-y: scroll;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column-reverse;
   }
 
   .chatcontrols {
